implemented unidirectional mapping