@@ -1,17 +1,15 @@
 package com.kovan.junitTestCases;
 
 import com.kovan.entities.Address;
-import com.kovan.entities.User;
 import com.kovan.repository.AddressRepository;
-import com.kovan.repository.UserRepository;
 import com.kovan.service.AddressService;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.List;
+import static java.util.Optional.empty;
 import static java.util.Optional.of;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
@@ -23,16 +21,11 @@ class AddressServiceTest {
     @Mock
     private AddressRepository addressRepository;
 
-    @Mock
-    private UserRepository userRepository;
-
     @InjectMocks
     private AddressService addressService;
 
-    private final User user = User.builder().userId(1L).firstName("Abi").build();
     private final Address address = Address.builder()
             .addressId(1L)
-            .user(user)
             .state("Karnataka")
             .street("R K Nagar")
             .city("Bangalore")
@@ -41,45 +34,53 @@ class AddressServiceTest {
             .build();
 
     @Test
-    void testAddAddress(){
-
-        when(userRepository.findById(user.getUserId())).thenReturn(of(user));
+    void testAddAddress() {
         when(addressRepository.save(any(Address.class))).thenReturn(address);
-        Address result = addressService.addAddress(user.getUserId(),address);
+
+        Address result = addressService.addAddress(address);
 
         assertNotNull(result);
-        assertEquals(user.getUserId(),result.getUser().getUserId());
-        assertEquals(address,result);
-
+        assertEquals(address, result);
+        verify(addressRepository, times(1)).save(any(Address.class));
     }
 
     @Test
-    void testGetAddressesById(){
-
+    void testGetAddressesById() {
         when(addressRepository.findById(address.getAddressId())).thenReturn(of(address));
+
         Address result = addressService.getAddressesById(address.getAddressId());
 
-        Assertions.assertNotNull(result);
-        Assertions.assertEquals(address, result);
-        verify(addressRepository,times(1)).findById(address.getAddressId());
-
+        assertNotNull(result);
+        assertEquals(address, result);
+        verify(addressRepository, times(1)).findById(address.getAddressId());
     }
 
     @Test
-    void testGetAddressesByUserId() {
+    void testGetAddressesByIdThrowsException() {
+        when(addressRepository.findById(address.getAddressId())).thenReturn(empty());
 
+        RuntimeException exception = assertThrows(RuntimeException.class,
+                () -> addressService.getAddressesById(address.getAddressId()));
+
+        assertEquals("Address not found!", exception.getMessage());
+        verify(addressRepository, times(1)).findById(address.getAddressId());
+    }
+
+    @Test
+    void testGetAllAddresses() {
         List<Address> addressList = List.of(address);
-        when(addressRepository.findByUserUserId(user.getUserId())).thenReturn(addressList);
+        when(addressRepository.findAll()).thenReturn(addressList);
 
-        List<Address> result = addressService.getAddressesByUserId(user.getUserId());
+        List<Address> result = addressService.getAllAddresses();
 
+        assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(address, result.getFirst());
-        verify(addressRepository,times(1)).findByUserUserId(user.getUserId());
+        assertEquals(address, result.get(0));
+        verify(addressRepository, times(1)).findAll();
     }
 
     @Test
-    void testUpdateAddress(){
+    void testUpdateAddress() {
         Address updatedAddress = Address.builder()
                 .street("456 Elm St")
                 .city("Shelbyville")
@@ -93,29 +94,53 @@ class AddressServiceTest {
 
         Address result = addressService.updateAddress(address.getAddressId(), updatedAddress);
 
-        Assertions.assertNotNull(result);
-        Assertions.assertEquals(updatedAddress.getStreet(), result.getStreet());
-        Assertions.assertEquals(updatedAddress.getCity(), result.getCity());
+        assertNotNull(result);
+        assertEquals(updatedAddress.getStreet(), result.getStreet());
+        assertEquals(updatedAddress.getCity(), result.getCity());
         verify(addressRepository, times(1)).findById(address.getAddressId());
-        verify(addressRepository, times(1)).save(address);
+        verify(addressRepository, times(1)).save(any(Address.class));
     }
-        @Test
-    void testDeleteAddress() {
 
+    @Test
+    void testUpdateAddressThrowsException() {
+        Address updatedAddress = Address.builder()
+                .street("456 Elm St")
+                .city("Shelbyville")
+                .state("IL")
+                .postalCode("62565")
+                .country("USA")
+                .build();
+
+        when(addressRepository.findById(address.getAddressId())).thenReturn(empty());
+
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+                () -> addressService.updateAddress(address.getAddressId(), updatedAddress));
+
+        assertEquals("Address not found with ID: " + address.getAddressId(), exception.getMessage());
+        verify(addressRepository, times(1)).findById(address.getAddressId());
+        verify(addressRepository, times(0)).save(any(Address.class));
+    }
+
+    @Test
+    void testDeleteAddress() {
         when(addressRepository.existsById(address.getAddressId())).thenReturn(true);
+
         addressService.deleteAddress(address.getAddressId());
+
         verify(addressRepository, times(1)).existsById(address.getAddressId());
         verify(addressRepository, times(1)).deleteById(address.getAddressId());
     }
 
     @Test
     void testDeleteAddressThrowsException() {
-
         when(addressRepository.existsById(address.getAddressId())).thenReturn(false);
-        Assertions.assertThrows(IllegalArgumentException.class,
+
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
                 () -> addressService.deleteAddress(address.getAddressId()));
 
-       verify(addressRepository,times(1)).existsById(address.getAddressId());
+        assertEquals("Address not found with ID: " + address.getAddressId(), exception.getMessage());
+        verify(addressRepository, times(1)).existsById(address.getAddressId());
+        verify(addressRepository, times(0)).deleteById(address.getAddressId());
     }
 }
 
